# 2d_football

./: .gitignore  CMakeLists.txt  Readme.md  football
src/: Ball.cpp  Ball.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  Playground.cpp  Playground.h  Propertices.cpp  Properties.h  main.cpp
src/shaders/: player.fs  playground.fs  playground.vs  text.vs
src/utils/: Log.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture2d.cpp  Texture2d.h
